18. Highlight section headers if match during 'Search within list'.
19. Re-order some '...' menu entries.
20. Add jumplist entries for section headers.
21. When using 'mini-player' don't show group volume dialog.
22. Rename 'Music sources' to 'Media sources'.
23. Add support for LMS8.4 'live edge' when playing live streams - currently
    BBC Sounds only.

4.2.2
-----
 1. Fix hiding unpinned queue when click on link and window is narrow.
 2. Adjust now-playing bar size settings to allow for mini-player use-case.
 3. Better handling of volume dialog for mini-player use-case.
 4. Add empty context menu handler for buttons that have long-press action and
    use SVG icons.
 5. Alter now-playing cover rounding based upon size.
 6. Fix add/play hover buttons for large track lists.
 7. Fix certain server side bool options being reset when disabled.
 8. Fix 'All songs' and 'Composition' sorts.
 9. Fix missing playlist actions.
10. Fix album header duration display for 'All songs', etc.

4.2.1
-----
1. Adjust unpinned queue metrics when used on mobile.
2. Fix now-playing updates due to use of extid in track sources.
3. Always request extid for player status, as showing logo/emblems regardless.
4. Update some CSS @media rules.

4.2.0
-----
 1. Add ability to search for items in lists (browse and queue).
 2. Click on now-playing cover-art to show skip, menu, and close buttons.
 3. Remove now-playing pulse, as clicking cover shows buttons.
 4. Hide menu and close buttons on now-playing screen if using 'np-only' URL.
 5. Work-around volume control moving in desktop layout when toggle MAI button.
 6. Better handling of now-playing button sizes for very narrow screen widths.
 7. Fix track list indents.
 8. Always use light text for now-playing menu and close icons.
 9. Fix blank area showing at bottom of screen when using now-playing bar on
    mobile layout with keyboard shown.
10. Cache similar-artists response to 'Cache/material-skin/similar-artists/'